--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <meta name="description" content="Découvrez ma passion pour le football : pourquoi j'aime ce sport, les règles et l'histoire du football.">
   <link rel="stylesheet" href="css/styles.css">
 </head>
+<script>
+  window.addEventListener('load', () => {
+    document.body.classList.add('loaded');
+  });
+</script>
 <body class="index-page">
   <header>
     <h1>Bienvenue sur mon site dédié au Football</h1>
